--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -116,7 +116,7 @@ button.view.tasklist = Voir la liste des t\u00E2ches
 checkbox.allow.buzz = Autoriser les contacts \u00E0 vous interpeller
 checkbox.auto.discover.port = &D\u00E9tecter automatiquement l'h\u00F4te et le port
 checkbox.auto.login = &Login Automatique
-checkbox.broadcast.hide.offline.user = Cacher les contacts d\u00E9connect\u00E9s
+checkbox.broadcast.dns.offline.user = Cacher les contacts d\u00E9connect\u00E9s
 checkbox.disable.chat.history = &D\u00E9sactiver l'Historique de Conversation
 checkbox.disable.prev.chat.history = &D\u00E9sactiver l'afichage des conversations pr\u00E9c\u00E9dentes dans le chat
 checkbox.enable.emoticons = &Activer les smileys
@@ -135,7 +135,7 @@ checkbox.private.room = Salon de Discussion Priv\u00E9
 checkbox.reconnect.panel.big = Afficher en tant que panneau
 checkbox.reconnect.panel.icon = Afficher en tant qu'icône
 checkbox.reconnect.panel.small = Afficher dans le groupe de contact
-checkbox.reconnet.info = Sp\u00E9cifier l'affichage de reconnexion:
+checkbox.reconnet.info = Indiquez le type d'affichage \u00E0 utiliser pour la reconnexion:
 checkbox.save.password = &Enregistrer le Mot de Passe
 checkbox.show.avatars.in.contactlist = Afficher les &avatars
 checkbox.show.notifications.in.conference = &Afficher les Notifications en Conf\u00E9rence
@@ -147,9 +147,14 @@ checkbox.tabs.on.top = Fen\u00EAtre de discussion toujours visible (n\u00E9cessi
 checkbox.use.compression = Utiliser la compression
 checkbox.use.debugger.on.startup = Lancer le d\u00E9bugger au d\u00E9marrage
 checkbox.use.proxy.server = &Utiliser un Proxy
-checkbox.use.krb.dns = Utilier le DNS
 checkbox.use.system.look.and.feel = Utiliser l'ergonomie du syst\u00E8me (n\u00E9cessite de red\u00E9marrer)
 checkbox.window.to.front = &Mettre la fen\u00EAtre en premier plan
+checkbox.use.krbconf = Utilier krb5.conf ou krb5.ini
+checkbox.use.krb.dns = Utilier le DNS
+checkbox.use.specify.below = Indiquer ci-dessous
+checkbox.use.pki.authentication = Utiliser l'authentification par PKI
+checkbox.transport.tab.setting = Montrer les types de transports disponibles dans un onglet (red\u00E9marrage n\u00E9cessaire)
+checkbox.conference.tab.setting =  Montrer les services de conf\u00E9rence disponibles dans un onglet (red\u00E9marrage n\u00E9cessaire)
 
 delete.log.permanently = Effacer les logs d\u00E9finitivement
 delete.permanently = Effacer d\u00E9finitivement?
@@ -261,7 +266,7 @@ label.state.and.province = Etat ou Province
 label.street.address = &Adresse Postale
 label.time = Heure\: (0)
 label.time.till.idle = &Temps maximum avant mise en veille (min)
-label.time.till.idlemessage = Message automatique d'inactivit\u00E9
+label.time.till.idlemessage = Message d'absence automatique
 label.timeformat = Utilise {0}
 label.transfer.download.directory = &R\u00E9pertoire de T\u00E9l\u00E9chargement
 label.transfer.timeout = &Temps d'attente maximal pour un transfert de fichier (min)\:
@@ -280,15 +285,15 @@ label.x509.certificate = Certificat X.509
 label.xmpp.port = &Port XMPP
 
 lookandfeel.change.now = Changer maintenant
-lookandfeel.color.blue = Bleue
+lookandfeel.color.blue = Bleu
 lookandfeel.color.green = Vert
 lookandfeel.color.label = Couleurs
 lookandfeel.color.opacity = Opacit\u00E9
 lookandfeel.color.red = Rouge
-lookandfeel.color.saved = Ccouleur sauvegarder
-lookandfeel.select = S\u00E9lectionnez le th\u00E8me
+lookandfeel.color.saved = Couleur enregistr\u00E9e
+lookandfeel.select = Choisir l'apparence
 lookandfeel.tooltip.restart.no = Red\u00E9marrage non n\u00E9cessaire
-lookandfeel.tooltip.restart.yes = Pour basculer d'un th\u00E8me syst\u00E8me appuyez sur enregistrer et red\u00E9marrez Spark.
+lookandfeel.tooltip.restart.yes = Pour choisir une apparence, cliquer sur sauver et red\u00E9marrer Spark.
 
 menuitem.about = A propos
 menuitem.actions = Actions
@@ -296,11 +301,11 @@ menuitem.add = Ajouter
 menuitem.add.as.contact = Ajouter en tant que Contact
 menuitem.add.contact = Ajouter Contact
 menuitem.add.contact.group = Ajouter Groupe de Contact
-menuitem.add.groupchat.auto.accept.invite = &Accepter automatiquement les invitation aux salles de discussion
+menuitem.add.groupchat.auto.accept.invite = &Accepter automatiquement les invitations \u00E0 une discussion de groupe
 menuitem.add.groupchat.myname = Mettre mon &nom en \u00E9vidence quand quelqu'un me cite
 menuitem.add.groupchat.mytext = Mettre en \u00E9vidence le texte que j'\u00E9cris
 menuitem.add.groupchat.popname = Afficher un &popup quand quelqu'un cite mon nom
-menuitem.add.groupchat.random.colors = Les noms ont des couleurs &al\u00E9atoires
+menuitem.add.groupchat.random.colors = Couleurs al\u00E9atoires pour les noms
 menuitem.add.groupchat.showjoinleavemessage = &Afficher les messages d'arriv\u00E9e et de d\u00E9part
 menuitem.add.groupchat.showrolesinsteadofstatus = Afficher les ic\u00F4nes de r\u00F4le \u00E0 la place des ic\u00F4nes de statut
 menuitem.affiliation = Affiliation
@@ -399,6 +404,7 @@ menuitem.view.profile = Voir Profil
 menuitem.view.room.info = Voir les Infos du Salon
 menuitem.voice = Voice
 
+message = Message
 message.account.create = Cr\u00E9er un nouveau compte.
 message.account.created = Le nouveau compte a \u00E9t\u00E9 cr\u00E9e.
 message.account.error = Sp\u00E9cifiez le serveur sur lequel cr\u00E9er le compte.
@@ -553,7 +559,7 @@ message.room.destruction.reason = Raison pour laquelle vous souhaitez d\u00E9tru
 message.room.information.for = Infos du Salon pour {0}
 message.save.profile = Pour enregistrer votre profil, cliquez sur Sauver.
 message.search.for.contacts = Recherche de Contacts.
-message.search.for.history = Recherche historique des conversations
+message.search.for.history = Rechercher dans l'historique des conversations
 message.search.for.other.people = Rechercher les utilisateurs de ce m\u00EAme serveur.
 message.search.input.short = SVP fournir au moins cinq lettres.
 message.search.service.not.available = Service de Recherche hors service.
@@ -642,37 +648,38 @@ message.your.voice.revoked = Vos droits Voice ont \u00E9t\u00E9 r\u00E9voqu\u00E
 ##Settings for the privacy plugin
 pricacy.tooltip.preferences = Param\u00E8tres de confidentialit\u00E9
 privacy.border.block = Bloquer
-privacy.border.information = Information de Confidentialit\u00E9
-privacy.button.no.list.selected = Aucune liste s\u00E9lectionn\u00E9e
-privacy.dialog.add.list = SVP entrez le nom de la liste
-privacy.dialog.rem.list = Voulez-vous vraiment supprimer {0}?
-privacy.label.information = Utilisez le menu contextuel pour ajouter ou supprimer des listes ou des items
-privacy.label.iq.desc = Interroger
-privacy.label.list.is.active = Liste active:
+privacy.border.information = Informations
+privacy.button.no.list.selected = Pas de liste s\u00E9l\u00E9ctionn\u00E9e
+privacy.dialog.add.list = Veuillez saisir le nom de famille
+privacy.dialog.rem.list = Voulez-vous vraiment enlever {0}?
+privacy.label.information = Utilisez le menu du clic droit pour ajouter ou supprimer des listes et \u00E9l\u00E9ments
+privacy.label.iq.desc = Rechercher
+privacy.label.list.is.active = Liste active en ce moment:
 privacy.label.list.is.default = Liste par d\u00E9faut:
 privacy.label.msg.desc = Messages
-privacy.label.not.supported = Les listes de confidentialit\u00E9 ne sont pas pris en charge par le serveur.
-privacy.label.pin.desc = Pr\u00E9sence dans
-privacy.label.pout.desc = Pr\u00E9sence sur
-privacy.label.preferences = Confidentialit\u00E9
+privacy.label.not.supported = Les r\u00E9glages vie priv\u00E9e ne sont pas possibles sur le serveur
+privacy.label.pin.desc = Notifications de connexion
+privacy.label.pout.desc = Notifications de d\u00E9connexion
+privacy.label.preferences = Plugin vie priv\u00E9e
 privacy.menu.activate.list = Activer
-privacy.menu.add.contacts = Ajouter des contacts \u00E0 la liste
-privacy.menu.add.groups = Ajouter des groupes \u00E0 la liste
-privacy.menu.add.list = Ajouter
-privacy.menu.add.rem.items = Enlever {0} items de la liste
-privacy.menu.default.list = D\u00E9finir par d\u00E9faut
-privacy.menu.remove = Enlever
-privacy.menu.remove.list = Enlever
-privacy.menuitem.deactivate.current.list = D\u00E9sactiv\u00E9 {0}
+privacy.menu.add.contacts = Ajouter des Contacts \u00E0 la liste
+privacy.menu.add.groups = Ajouter des Groupes \u00E0 la liste
+privacy.menu.add.list = Ajouter une liste
+privacy.menu.add.rem.items = Retirer {0} \u00E9l\u00E9ments de la liste
+privacy.menu.default.list = Choisir par d\u00E9faut
+privacy.menu.remove = Retirer
+privacy.menu.remove.list = Supprimer une liste
+privacy.menuitem.deactivate.current.list = D\u00E9sactiver {0}
 privacy.name.for.default.list = Par d\u00E9faut
 privacy.node.contacts = Contacts
 privacy.node.groups = Groupes
-privacy.pick.one.or.more = Choisissez un ou plusieurs \u00E9l\u00E9ments \u00E0 ajouter \u00E0 la liste
-privacy.root.node = Listes de confidentialit\u00E9
-privacy.status.menu.entry = Listes de confidentialit\u00E9
-privacy.title.add.picker = Ajouter les items \u00E0 la liste
-privacy.title.panel = SVP utilisez le bouton droit de la souris
-privacy.title.preferences = Param\u00E8tres de confidentialit\u00E9
+privacy.pick.one.or.more = Choisir un ou plusieurs \u00E9l\u00E9ments \u00E0 ajouter \u00E0 la liste
+privacy.root.node = Listes d'autorisations
+privacy.status.menu.entry = Liste de r\u00E9glages vie priv\u00E9e
+privacy.title.add.picker = Ajouter \u00E0 la liste
+privacy.title.panel = Utilisez le bouton droit de la souris SVP
+privacy.title.preferences = Plugin vie priv\u00E9e
+privacy.tooltip.preferences = R\u00E9glages vie priv\u00E9e
 
 status.away = Absent
 status.custom.messages = Messages personnalis\u00E9s
@@ -680,7 +687,7 @@ status.do.not.disturb = Ne pas d\u00E9ranger
 status.extended.away = Absence prolong\u00E9e
 status.free.to.chat = Disponible
 status.on.phone = Au t\u00E9l\u00E9phone
-status.online = En ligne
+status.online = Connect\u00E9
 status.pending = En attente
 
 ##Stunfallback in media settings
@@ -702,7 +709,7 @@ tab.pki = PKI
 tab.proxy = Proxy
 tab.sso = SSO
 
-title.about = A Propos
+title.about = A propos
 title.account.create.registration = Cr\u00E9ation des Comptes
 title.account.created = Compte Cr\u00E9e
 title.add.contact = Ajouter Contact
@@ -716,14 +723,14 @@ title.advanced.connection.sso = Utiliser le Single Sign-On (SSO)
 title.advanced.connection.sso.account = Ceci utilisera le compte du bureau pour "{0}" \u00E0 connecter au serveur.
 title.advanced.connection.sso.noprincipal = Spark est incapable de trouver le principal \u00E0 utiliser pour le Single Sign-On. Ceci emp\u00EAche SSO de fonctionner.
 title.advanced.connection.sso.unable = Impossible de connecter en utilisant le Single Sign-On. SVP v\u00E9rifiez votre principal et les param\u00E8tres du serveur.
-title.advanced.connection.usesso = Utiliser Single Sign-On (SSO) via GSSAPI
+title.advanced.connection.usesso = Se connecter via GSSAPI (SSO)
 title.aim.registration = Compte AIM
 title.alert = Alerte
 title.appearance = Apparence
-title.appearance.preferences = Param\u00E8tres d'apparence
-title.appearance.showVCards = Montrer les &VCards dans la liste de contact
+title.appearance.preferences = Personnalisation
+title.appearance.showVCards = Montrer les &VCards dans la liste de contacts
 title.available.transports = Transports Disponibles
-title.bookmarks = Favoris
+title.bookmarks = Marques-pages
 title.broadcast.message = Message group\u00E9
 title.browse.conference.services = Voir les services de conf\u00E9rence
 title.browse.room.service = Voir les salles de conf\u00E9rence
@@ -735,7 +742,7 @@ title.choose.directory = S\u00E9lectionnez un r\u00E9pertoire
 title.choose.incoming.sound = S\u00E9lectionnez un fichier d'alerte sonore lors de messages entrants
 title.choose.offline.sound = S\u00E9lectionnez un fichier d'alerte sonore pour les d\u00E9connexions
 title.choose.outgoing.sound = S\u00E9lectionnez un fichier d'alerte sonore pour les messages sortants
-title.client.logs = Journal d'u00E9v\u00E9nements
+title.client.logs = Logs client
 title.conference.invitation = Invitation \u00E0 une Conf\u00E9rence
 title.conference.rooms = Salles de conf\u00E9rence
 title.configure.chat.room = Configurer le Salon de Discussion
@@ -745,7 +752,7 @@ title.create.new.account = Cr\u00E9er un nouveau compte
 title.create.or.bookmark.room = Rejoindre ou ajouter le salon aux favoris
 title.create.or.join = Cr\u00E9er/Rejoindre
 title.create.problem = Erreur de cr\u00E9ation du compte
-title.delete.file = Voulez-vous vraiment supprimer ce fichier?
+title.delete.file = Voulez-vous vraiment supprimer le fichier?
 title.dial.phone = T\u00E9l\u00E9phoner
 title.disable.transport = D\u00E9sactiver le Transport
 title.download.complete = T\u00E9l\u00E9chargement Termin\u00E9
@@ -755,11 +762,11 @@ title.edit.custom.message = Editer les messages personnalis\u00E9s
 title.edit.profile = Editer Profil
 title.enter.reason = Donnez une raison
 title.error = Erreur
-title.error.couldnt.open.file = Impossible d'ouvrir le ficchier
-title.error.delete.file = Impossible de supprimer le fichier
-title.error.find.app = Impossible de trouver une application correspondant
+title.error.couldnt.open.file = Impossible d'ouvrir le fichier
+title.error.delete.file = Impossible d'effacer le fichier
+title.error.find.app = Impossible de trouver l'application correspondante
 title.error.rename.file = Impossible de renommer le fichier
-title.facebook.registration = Identifiant de compte Facebook
+title.facebook.registration = Identifiants Facebook
 title.file = Fichier
 title.file.exists = Le fichier existe d\u00E9j\u00E0
 title.file.transfer = Transfert de fichier
@@ -767,35 +774,35 @@ title.file.transfer.preferences = Pr\u00E9f\u00E9rences Transfert de Fichier
 title.filesize = Taille
 title.find.conference.service = Rechercher les Services de Conf\u00E9rence
 title.find.contacts = Rechercher Contacts
-title.gadugadu.registration = Identifiant de compte GaduGadu
+title.gadugadu.registration = Identifiants GaduGadu
 title.general.chat.settings = Param\u00E8tres de Chat
-title.general.media = P\u00E9riph\u00E9riques
+title.general.media = R\u00E9glages Multimedia
 title.group.chat = Conf\u00E9rence
-title.group.chat.settings = Param\u00E8tres de conf\u00E9rence
-title.gtalk.registration = Identifiant de compte GTalk
+title.group.chat.settings = R\u00E9glages des groupes de discussion
+title.gtalk.registration = Identifiants GTalk
 title.history.for = Historique de conversation de {0}
 title.icq.registration = Compte ICQ
 title.incoming.call = Appel Entrant
-title.input.fileexplorer = SVP entrer le nom de votre navigateur de fichier:
-title.input.newname = SVP entrez le nouveau nom \:
-title.input.openwith = SVP entrer le nom de l'application que vous souhaitez utiliser:
+title.input.fileexplorer = Saisissez le nom de votre navigateur:
+title.input.newname = Saisissez le nouveau nom\:
+title.input.openwith = Saisissez le nom de l'application que vous voulez utiliser:
 title.invite.to.conference = Inviter \u00E0 une Conf\u00E9rence
-title.irc.registration = Identifiant de compte IRC
+title.irc.registration = Identifiants IRC
 title.jabber.browser = Navigateur
 title.join.conference.room = Rejoindre une Conf\u00E9rence
 title.last.activity = Derni\u00E8re Activit\u00E9
 title.login = Login
-title.login.error = Erreur de Login
+title.login.error = Erreur de connexion
 title.login.no.account = Impossible de d\u00E9terminer
 title.login.settings = Param\u00E8tres de Login
 title.lookup.profile = Voir Profil
 title.msn.registration = Compte MSN
-title.myspace.registration = Identifiant de compte MySpace
+title.myspace.registration = Identifiants MySpace
 title.name = Nom
 title.new.client.available = Nouveau Client disponible
 title.new.roster.group = Nouveau Groupe de Contacts
 title.new.version.available = Nouvelle Version disponible
-title.no.updates = Aucune mise \u00E0 jour
+title.no.updates = Pas de mise \u00E0 jour
 title.notes = Notes
 title.notification = Notification
 title.notifications = Notifications
@@ -809,7 +816,7 @@ title.plugins = Plugins
 title.preferences = Pr\u00E9f\u00E9rences
 title.profile.information = Infos de Profil
 title.profile.not.found = Profil inexistant
-title.qq.registration = Identifiant de compte QQ
+title.qq.registration = Identifiants QQ
 title.register.account = Cr\u00E9er un nouveau compte
 title.registration.error = Erreur de cr\u00E9ation
 title.reminder = Rappel
@@ -817,17 +824,17 @@ title.rename.roster.group = Renommer un group de contacts
 title.room.destroyed = Salon Supprim\u00E9
 title.room.information = Infos du Salon
 title.roster = Contacts
-title.sametime.registration = Identifiant de compte Sametime
+title.sametime.registration = Identifiants Sametime
 title.select.file.to.send = Selectionnez un Fichier \u00E0 envoyer
 title.set.status.message = Editer le message d'\u00E9tat
-title.simple.registration = Identifiant de compte SIMPLE
+title.simple.registration = Identifiants SIMPLE
 title.sound.preferences = Pr\u00E9f\u00E9rences Sonores
 title.sounds = Sons
 title.spark.preferences = Pr\u00E9f\u00E9rences Spark
 title.start.chat = Ouvrir une conversation
 title.status.message = Message d'\u00E9tat
 title.subscription.request = Demande d'abonnement
-title.task.notification = Notification des t\u00E2ches
+title.task.notification = Notification de t\u00E2che
 title.tasks = T\u00E2ches
 title.transports = Transports
 title.tray.information = Infos de la Zone d'iconification
@@ -837,15 +844,15 @@ title.view.bookmarks = Voir les Favoris
 title.view.profile.for = Voir le Profil de {0}
 title.view.room.information = Voir les Infos du Salon
 title.waiting.to.call = Attente
-title.xmpp.registration = Identifiant de compte XMPP
+title.xmpp.registration = Identifiants XMPP
 title.yahoo.registration = Compte Yahoo
 
-tooltip.appearance = Changer l'apparence de vos conversations
-tooltip.file.transfer = Pr\u00E9f\u00E9rences pour transfert de fichier
+tooltip.appearance = Changer l'apparence des conversations
+tooltip.file.transfer = Pr\u00E9f\u00E9rences pour le transfert de fichiers
 tooltip.notifications = Pr\u00E9f\u00E9rences de Notification pour les chat entrants
 tooltip.place.a.call = Appeler cette Personne
-tooltip.place.voice.call = Appeler cet usager
-tooltip.send.email = Envoyer un courriel
+tooltip.place.voice.call = Appeler cet utilisateur
+tooltip.send.email = Envoyer un email
 tooltip.start.chat = D\u00E9marrer une conversation
 tooltip.view.changelog = Lire le Change Log
 tooltip.view.history = Voir l'historique de conversation
