Add option to disable dimming of idle users (default is to dim) (original patch by Niklas, updated to current source) https://igniterealtime.org/issues/browse/SPARK-979

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -338,6 +338,7 @@ checkbox.disable.chat.history = &Disable chat history
 checkbox.sort.asc.history = Sort messages in contact history by date ascending
 checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
 checkbox.enable.emoticons = E&nable emoticons
+checkbox.graying.out = Dim idle contacts (requires restart)
 checkbox.idle.enabled = &Idle enabled
 checkbox.launch.on.startup = &Launch on startup
 checkbox.reconnet.info = Specify reconnection display:
