--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -228,6 +228,7 @@ checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
 checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.
 checkbox.enable.emoticons = &Emoticons aktivieren 
+checkbox.graying.out = Nichtstuende Kontakte ausgrauen (benötigt Neustart von Spark)
 checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
 checkbox.notify.user.comes.online = &Benachrichtigen, wenn ein User Online kommt
 checkbox.notify.user.goes.offline = Benachrichtigen, wenn ein &User Offline geht
