--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -296,6 +296,7 @@ checkbox.disable.chat.history = I\u0161j&ungti pokalbi\u0173 \u017eurnal\u0105
 checkbox.sort.asc.history = R\u016b\u0161iuo&ti \u017einutes kontakto istorijoje datos did\u0117jimo tvarka
 checkbox.disable.prev.chat.history = &I\u0161jungti ankstesni\u0173 pokalbi\u0173 rodym\u0105
 checkbox.enable.emoticons = &Rodyti jaustukus
+checkbox.graying.out = U\u017epilkinti neaktyvius adresatus
 checkbox.idle.enabled = \u012ejungti neveikos rodym\u0105
 checkbox.launch.on.startup = Paleisti startavus
 checkbox.reconnet.info = Nurodyti pakartotino prisijungimo rodym\u0105:
