--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -377,6 +377,7 @@ checkbox.use.pki.authentication = Use PKI authentication
 checkbox.transport.tab.setting = Show available transports in tab (requires restart)
 checkbox.conference.tab.setting = Show conference service in tab (requires restart)
 checkbox.use.hostname.as.resource = Use hostname as resource
+checkbox.use.version.as.resource = Use Spark version as resource
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
