--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -335,6 +335,7 @@ checkbox.use.pki.authentication = &PKI autentifikavimo naudojimas
 checkbox.transport.tab.setting = Rodyti prieinamus ry\u0161io kanalus kortel\u0117je (reikalingas perkrovimas)
 checkbox.conference.tab.setting = Rodyti grupini\u0173 pokalbi\u0173 tarnyb\u0105 kortel\u0117je (reikalingas perkrovimas)
 checkbox.use.hostname.as.resource = Na&udoti kompiuterio vard\u0105 kaip resurs\u0105
+checkbox.use.version.as.resource = Naudot&i Spark versij\u0105 kaip resurs\u0105
 
 delete.log.permanently = Visi\u0161kas \u017eurnalo pa\u0161alinimas
 delete.permanently = Galutinai pa\u0161alinti?
