Add "0 = infinite" caption to roar duration option https://igniterealtime.org/issues/browse/SPARK-1621

--- a/src/plugins/roar/src/resources/i18n/roar_i18n.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n.properties
@@ -3,8 +3,8 @@
 
 roar.settings = Roar Settings
 roar.enabled = Popups enabled
-roar.duration = Duration in ms:
-roar.amount = Maximum Popups on Screen (0=infinity):
+roar.duration = Duration in ms (0 = infinite):
+roar.amount = Maximum popups on screen (0 = infinite):
 roar.location = Change popup starting location (requires restart)
 roar.display.topright = Top Right
 roar.display.bottomright = Bottom Right
