--- a/src/plugins/roar/src/resources/i18n/roar_i18n_lt.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_lt.properties
@@ -3,7 +3,7 @@
 
 roar.settings = Roar Nustatymai
 roar.enabled = \u012ejungti i\u0161\u0161okan\u010dius langus
-roar.duration = Rodymo trukm\u0117 (ms):
+roar.duration = Rodymo trukm\u0117 (ms) (0 = neribojama):
 roar.amount = Maksimalus lang\u0173 skai\u010dius ekrane (0 = neribojama):
 roar.location = Pakeisti lang\u0173 atsiradymo prad\u017eios viet\u0105 (reikalingas perkrovimas)
 roar.display.topright = Vir\u0161uje de\u0161in\u0117je
