Additional changes to other translations (roar duration) https://igniterealtime.org/issues/browse/SPARK-1621

--- a/src/plugins/roar/src/resources/i18n/roar_i18n_de.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_de.properties
@@ -3,8 +3,8 @@
 
 roar.settings = Roar Einstellungen
 roar.enabled = Popups aktiv
-roar.duration = Dauer in ms:
-roar.amount = Maximale Anzahl von Popups (0=unbegrenzt):
+roar.duration = Dauer in ms (0 = unbegrenzt):
+roar.amount = Maximale anzahl von popups (0 = unbegrenzt):
 roar.location = Popupecke auswählen (benötigt Neustart)
 roar.display.topright = oben rechts
 roar.display.bottomright = unten rechts
