--- a/src/plugins/roar/src/resources/i18n/roar_i18n_pl.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_pl.properties
@@ -3,8 +3,8 @@
 
 roar.settings = Ustawienia ROAR
 roar.enabled = W\u0142\u0105cz wyskakuj\u0105ce powiadomienia
-roar.duration = Czas trwania w ms:
-roar.amount = Maksymalna ilo\u015b\u0107 powiadomie\u0144 na ekranie (0=bez limitu):
+roar.duration = Czas trwania w ms (0 = bez limitu):
+roar.amount = Maksymalna ilo\u015b\u0107 powiadomie\u0144 na ekranie (0 = bez limitu):
 roar.location = Zmiana miejsca wyskakuj\u0105cych powiadomie\u0144 (wymagany restart)
 roar.display.topright = G\u00F3rna prawa
 roar.display.bottomright = Dolna prawa
