Online/Offline toast popups improvement http://www.igniterealtime.org/issues/browse/SPARK-985

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -426,6 +426,7 @@ label.country = Country
 label.create.account = Create account
 label.department = Department
 label.dial = Dial
+label.display.time = Display Time:
 label.downloads = Downloads
 label.due = Due
 label.email.address = Email address
@@ -473,6 +474,7 @@ label.room = Room
 label.room.name = Room name
 label.room.topic = Room topic
 label.search.service = Search service
+label.seconds = Seconds
 label.server = &Server
 label.server.address = Server address
 label.show = Show:
