--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -331,6 +331,8 @@ label.emoticons = E&moticons
 label.contactlist.fontsize = Kontaktliste &Schriftgröße:
 label.chatroom.fontsize = &Chatroom Schriftgröße:
 label.contactlist.avatarsize = Kontaktliste &Avatargröße:
+label.display.time = Anzeigedauer:
+label.seconds = Sekunden
 label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Welche PKI Methode?
