--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -383,6 +383,7 @@ label.country = \u0160a&lis
 label.create.account = Sukurti paskyr\u0105
 label.department = &Skyrius
 label.dial = &Skambinti
+label.display.time = Rodymo laikas:
 label.downloads = Siuntos
 label.due = Iki
 label.email.address = Pa\u0161to &adresas
@@ -431,6 +432,7 @@ label.room = &Kambarys
 label.room.name = &Kambario vardas
 label.room.topic = Kambario pokalbio tema
 label.search.service = &Ie\u0161kos paslauga
+label.seconds = sekund\u0117s
 label.server = &Serveris
 label.server.address = &Serverio adresas
 label.show = Rodomos:
