Add translation for avatar label https://igniterealtime.org/issues/browse/SPARK-1472

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -409,6 +409,7 @@ label.add.jid = Add JID
 label.add.task = Add task
 label.auto.login = Auto login
 label.available.users.in.roster = Available users in roster
+label.avatar = Avatar:
 label.cancel = Cancel
 label.change.password.to = Change &password to
 label.chatroom.fontsize = Chat room &font size:
