--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -366,6 +366,7 @@ label.add.jid = &Pakviesti ir
 label.add.task = Pridedama u\u017eduotis
 label.auto.login = &Automatinis prisijungimas
 label.available.users.in.roster =   &Galimi partneriai visame s\u0105ra\u0161e
+label.avatar = Pseudoportretas:
 label.cancel = At\u0161aukti
 label.change.password.to = \u012er&a\u0161ykite nauj\u0105 slapta\u017eod\u012f
 label.chatroom.fontsize = Pokalbi\u0173 kambario \u0161riftas:
