Various confirmation dialogs should use i18n strings for Yes, No and Cancel buttons https://igniterealtime.org/issues/browse/SPARK-1329

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -474,6 +474,7 @@ label.response.timeout = &Response timeout (sec)
 label.room = Room
 label.room.name = Room name
 label.room.topic = Room topic
+label.search = Search
 label.search.service = Search service
 label.seconds = Seconds
 label.server = &Server
