--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -432,6 +432,7 @@ label.response.timeout = R&eakcijos laikas (sek.)
 label.room = &Kambarys
 label.room.name = &Kambario vardas
 label.room.topic = Kambario pokalbio tema
+label.search = Ie\u0161koti
 label.search.service = &Ie\u0161kos paslauga
 label.seconds = sekund\u0117s
 label.server = &Serveris
