Add i18n translation string for Transfer Guard title https://igniterealtime.org/issues/browse/SPARK-1651

--- a/src/plugins/transferguard/src/resources/i18n/transferguard_i18n.properties
+++ b/src/plugins/transferguard/src/resources/i18n/transferguard_i18n.properties
@@ -41,6 +41,7 @@
 ##      Added key: 'guard.settings.title.settings'
 ##
 
+guard.settings.title.list = Transfer Guard
 guard.settings.title.settings = File Transfer Settings
 guard.settings.tooltips.blockedtypes = Enter file extensions you wish to block (eg. '*.doc'), separated by commas
 guard.settings.tooltips.blockedperson = Enter the JID of users from whom you want to block file transfers (eg. 'loser@domain.com'), separated by commas
