--- a/src/plugins/transferguard/src/resources/i18n/transferguard_i18n_lt.properties
+++ b/src/plugins/transferguard/src/resources/i18n/transferguard_i18n_lt.properties
@@ -41,6 +41,7 @@
 ##      Added key: 'guard.settings.title.settings'
 ##
 
+guard.settings.title.list = Persiuntim\u0173 Apsauga
 guard.settings.title.settings = Byl\u0173 persiuntimo nustatymai
 guard.settings.tooltips.blockedtypes = \u012eveskite byl\u0173 i\u0161pl\u0117timus, kuriuos norite blokuoti (pvz. '*.doc'), atskiriant kableliais
 guard.settings.tooltips.blockedperson = \u012eveskite "JID'us" vartotoj\u0173 i\u0161 kuri\u0173 nenorite gauti byl\u0173 persiuntim\u0173 (pvz. 'kazkas@domain.com'), atskiriant kableliais
