Added a bunch of new and updated older chinese (TW) translations https://igniterealtime.org/issues/browse/SPARK-1656

--- a/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_zh_TW.properties
+++ b/src/plugins/sip/src/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_zh_TW.properties
@@ -26,90 +26,90 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 ##
 
-phone.starting = Starting Phone...
-phone.failed = Failed to start phone
-phone.tryagain = Try again
-phone.call = Call
-phone.voicemail = Voice Mail
-phone.viewcallhistory = View Call History
-phone.placecall = Place phone call.
-phone.hangup = End Call
-phone.tips.hangup = Hang up phone conversation
-phone.home = Home
-phone.work = Work
-phone.cell = Cell
-phone.currentcall = Current Call
-phone.incomingcall = Incoming Call
-phone.noprevious = No previous conversations.
-phone.callended = Call Ended
-phone.transferto = Call transferred to
-phone.connected = Connected
-phone.lastcalled = Last called
-phone.never = Never
-phone.duration = Duration
-phone.accept = Accept
-phone.reject = Reject
-phone.callback = Call Back
-phone.delete = Delete
-phone.enternumber = Enter a number to call.
-phone.invalidnumber = Invalid Number
-phone.outgoingcall = Outgoing call to
-phone.callhistory = Call History
-phone.dialed = Dialed
-phone.dialedcalls = Dialed Calls
-phone.received = Received
-phone.receivedcalls = Received Calls
-phone.missed = Missed
-phone.missedcalls = Missed Calls
-phone.unknown = Unknown
-phone.placecallto = Placed call to
-phone.receivedcallfrom = Received Call from
-phone.missedcallfrom = Missed call from
-phone.incomingcallfrom = Incoming call from
-phone.contactdetails = Contact Details
-phone.noinfo = No Information Available
-phone.viewfullprofile = View Full Profile
-phone.tips.mute = Mute this call
-phone.mute = Mute
-phone.unmute = Unmute
-phone.tips.hold = Place this call on Hold
-phone.hold = Hold
-phone.onhold = On Hold
-phone.time = Time
-phone.tips.transfer = Transfer this call
-phone.transfer = Transfer
-phone.transferring = Transferring
-phone.transfered = Transfered
-phone.callstartedat = Call Started at
-phone.callendedat = Call Ended at
-phone.onphonewith = On phone with
-phone.callendedwith = Call ended with
-phone.previousconversations = Previous Conversations
-phone.closeconfirm = Closing this room will end the call. Continue?
-phone.confirmation = Confirmation
-phone.all = All
-phone.allcalls = All Calls
-phone.tocall = Call
-btn.add  	= Add
-btn.edit 	= Edit
-btn.del  	= Delete
-btn.dial	= Call
-book.name 	= Name
-book.number = Number
-frame.title	= Phonebook
-book.search = Search
-btn.ok      = OK
-btn.cancel  = Cancel
-frame.add 	= "Add Entry"
-frame.edit 	= "Edit Entry"
-book.exists		= "The phonebook-entry you wish to add is already existing."
-book.noEntry	= "No Entry Selected!"
-book.fillFields = "Please fill all Fields"
-book.warning	= "Attention"
-title.sip.codecs.title = Codecs
-codecs.select 	= < Select
-codecs.unselect = Unselect >
-codecs.up		= Up ^
-codecs.down		= Down v
-codecs.audio.selected	= Selected Audio Codecs
-codecs.audio.avail		= Available Audio Codecs
+phone.starting = \u958b\u555f\u901a\u8a71\u4e2d...
+phone.failed = \u958b\u555f\u901a\u8a71\u5931\u6557
+phone.tryagain = \u91cd\u8a66
+phone.call = \u547c\u53eb
+phone.voicemail = \u8a9e\u97f3\u90f5\u4ef6
+phone.viewcallhistory = \u67e5\u770b\u901a\u8a71\u7d00\u9304
+phone.placecall = \u64a5\u6253\u96fb\u8a71
+phone.hangup = \u7d50\u675f\u901a\u8a71
+phone.tips.hangup = \u639b\u6389\u6b64\u901a\u8a9e\u97f3\u804a\u5929
+phone.home = \u9996\u9801
+phone.work = \u5de5\u4f5c
+phone.cell = \u5143\u4ef6
+phone.currentcall = \u76ee\u524d\u547c\u53eb
+phone.incomingcall = \u4f86\u96fb
+phone.noprevious = \u6c92\u6709\u4ee5\u524d\u7684\u5c0d\u8a71.
+phone.callended = \u901a\u8a71\u7d50\u675f
+phone.transferto = \u8f49\u63a5\u96fb\u8a71\u5230
+phone.connected = \u9023\u63a5
+phone.lastcalled = \u6700\u5f8c\u901a\u8a71
+phone.never = \u5f9e\u672a
+phone.duration = \u6301\u7e8c\u6642\u9593
+phone.accept = \u63a5\u53d7
+phone.reject = \u62d2\u7d55
+phone.callback = \u56de\u8986\u96fb\u8a71
+phone.delete = \u522a\u9664
+phone.enternumber = \u8f38\u5165\u8981\u64a5\u6253\u7684\u865f\u78bc.
+phone.invalidnumber = \u7121\u6548\u7684\u865f\u78bc
+phone.outgoingcall = \u5df2\u64a5\u51fa
+phone.callhistory = \u901a\u8a71\u7d00\u9304
+phone.dialed = \u5df2\u64a5
+phone.dialedcalls = \u5df2\u64a5\u96fb\u8a71
+phone.received = \u63a5\u807d
+phone.receivedcalls = \u63a5\u807d\u96fb\u8a71
+phone.missed = \u6f0f\u63a5
+phone.missedcalls = \u6f0f\u63a5\u96fb\u8a71
+phone.unknown = \u4e0d\u660e\u96fb\u8a71
+phone.placecallto = \u5df2\u64a5\u96fb\u8a71\u5230
+phone.receivedcallfrom = \u5f9e\u54ea\u88e1\u63a5\u5230\u96fb\u8a71
+phone.missedcallfrom = \u5f9e\u54ea\u88e1\u6f0f\u63a5\u96fb\u8a71
+phone.incomingcallfrom = \u5f9e\u54ea\u88e1\u4f86\u96fb
+phone.contactdetails = \u806f\u7d61\u65b9\u5f0f
+phone.noinfo = \u7121\u53ef\u7528\u8cc7\u6599
+phone.viewfullprofile = \u67e5\u770b\u5b8c\u6574\u500b\u4eba\u8cc7\u6599
+phone.tips.mute = \u975c\u97f3\u901a\u8a71
+phone.mute = \u975c\u97f3
+phone.unmute = \u53d6\u6d88\u975c\u97f3
+phone.tips.hold = \u9019\u901a\u96fb\u8a71\u7b49\u5f85\u63a5\u807d
+phone.hold = \u901a\u8a71\u4fdd\u7559
+phone.onhold = \u7b49\u5019\u63a5\u807d
+phone.time = \u6642\u9593
+phone.tips.transfer = \u5c07\u9019\u901a\u96fb\u8a71\u8f49\u63a5
+phone.transfer = \u8f49\u63a5
+phone.transferring = \u8f49\u63a5\u4e2d
+phone.transfered = \u5df2\u8f49\u63a5
+phone.callstartedat = \u5728\u54ea\u88e1\u958b\u59cb\u547c\u53eb
+phone.callendedat = \u5728\u54ea\u88e1\u7d50\u675f\u547c\u53eb
+phone.onphonewith = \u548c\u8ab0\u901a\u8a71\u4e2d
+phone.callendedwith = \u548c\u8ab0\u901a\u8a71\u7d50\u675f
+phone.previousconversations = \u4e4b\u524d\u7684\u901a\u8a71
+phone.closeconfirm = \u96e2\u958b\u9019\u500b\u6703\u8b70\u5ba4\u5c07\u7d50\u675f\u901a\u8a71,\u7e7c\u7e8c\u55ce?
+phone.confirmation = \u78ba\u8a8d
+phone.all = \u5168\u90e8
+phone.allcalls = \u5168\u90e8\u547c\u53eb
+phone.tocall = \u547c\u53eb
+phone.enabled = \u555f\u52d5\u96fb\u8a71
+btn.add  	= \u65b0\u589e
+btn.edit 	= \u7de8\u8f2f
+btn.del  	= \u522a\u9664
+btn.dial	= \u64a5\u865f
+book.name 	= \u59d3\u540d
+book.number = \u96fb\u8a71\u865f\u78bc
+frame.title	= \u96fb\u8a71\u7c3f
+book.search = \u641c\u5c0b
+btn.ok      = \u78ba\u5b9a
+btn.cancel  = \u53d6\u6d88
+frame.add 	= "\u65b0\u589e\u9805\u76ee"
+frame.edit 	= "\u7de8\u8f2f\u9805\u76ee"
+book.exists		= "\u60a8\u60f3\u8981\u65b0\u589e\u7684\u96fb\u8a71\u7c3f\u5df2\u7d93\u5b58\u5728."
+book.noEntry	= "\u6c92\u6709\u5165\u53e3\u9078\u64c7!"
+book.fillFields = "\u8acb\u586b\u5beb\u6240\u6709\u5340\u57df"
+book.warning	= "\u6ce8\u610f"
+title.sip.codecs.title = \u7de8\u78bc\u89e3\u78bc\u5668
+codecs.select 	= < \u9078\u64c7
+codecs.unselect = \u53d6\u6d88\u9078\u64c7 >
+codecs.up		= \u5411\u4e0a ^
+codecs.down		= \u5411\u4e0b v
+codecs.audio.selected	= \u9078\u64c7\u7684\u97f3\u983b\u7de8\u78bc\u89e3\u78bc\u5668
