Fix Lithuanian translation of Tic Tac Toe game https://igniterealtime.org/issues/browse/SPARK-1669

--- a/src/plugins/tictactoe/src/resources/i18n/tictactoe_i18n_lt.properties
+++ b/src/plugins/tictactoe/src/resources/i18n/tictactoe_i18n_lt.properties
@@ -3,14 +3,14 @@
 #    by wolf.posdorfer    #
 ###########################
 
-ttt.game.request = {0} , prasydama TicTacToe zaidima
-ttt.game.name = Tic Tac Toe pasmerkimo
-ttt.window.title = {0} palyginti su {1}
-ttt.win = Sveikinu, tu laimejai!
-ttt.lose = Atsiprasome, jus praradote!
-ttt.tie = Zaidimas baigesi lygiosiomis.
-ttt.display.me = As esu:
-ttt.display.current = siuo metu zaidzia:
-ttt.request.decline = Zaidimas prasymas buvo atmestas.
-ttt.request.accept = Zaidimas prasideda.
-ttt.request.sent = Siuntimas zaidimas prasyma ...
+ttt.game.request = {0} u\u017eklaus\u0117 Kry\u017eiukai-nuliukai \u017eaidimo
+ttt.game.name = Kry\u017eiukai-nuliukai
+ttt.window.title = {0} prie\u0161 {1}
+ttt.win = Sveikiname, j\u016bs laim\u0117jote!
+ttt.lose = Apgail\u0117staujame, j\u016bs pralaim\u0117jote!
+ttt.tie = \u017Daidimas baig\u0117si lygiosiomis.
+ttt.display.me = A\u0161 esu:
+ttt.display.current = \u0161iuo metu \u017eaid\u017eia:
+ttt.request.decline = \u017Daidimas pra\u0161ymas buvo atmestas.
+ttt.request.accept = \u017Daidimas prasideda.
+ttt.request.sent = Siun\u010diama \u017eaidimo u\u017eklausa...
