--- a/src/plugins/fastpath/src/resources/i18n/fastpath_i18n_lt.properties
+++ b/src/plugins/fastpath/src/resources/i18n/fastpath_i18n_lt.properties
@@ -19,7 +19,7 @@ visitor = Lankytojas
 email = El. pa\u0161tas
 question = Klausimas
 start.time = Start Time
-seconds = Sekund\u0117i\u0173
+seconds = Sekund\u017Ei\u0173
 name = Vardas
 from = Siunt\u0117jas
 room = Kambarys
