Add i18n for Offline message prefix https://igniterealtime.org/issues/browse/SPARK-1671

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -211,7 +211,7 @@ join = Prisiju&ngti
 no = Ne
 not.registered = Neregistruota
 occupants = Lankytoj\u0173 sk.:
-offline = Atsijung\u0117
+offline = Atsijung\u0119s
 ok = Gerai
 online = Prisijung\u0117
 open = Atverti
