--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -538,6 +538,7 @@ menuitem.change.nickname = Change nickname
 menuitem.change.subject = Change subject
 menuitem.chat = Chat
 menuitem.check.for.updates = Check for &updates
+menuitem.connect = File
 menuitem.contacts = Contacts
 menuitem.copy.to = Copy to
 menuitem.delete = Delete
