Lithuanian translation for File menu (was Spark) https://igniterealtime.org/issues/browse/SPARK-1680

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -496,6 +496,7 @@ menuitem.change.nickname = Keisti pseudonim\u0105
 menuitem.change.subject = Keisti tem\u0105
 menuitem.chat = Pokalbis
 menuitem.check.for.updates = Ie\u0161koti programos atnaujinim\u0173
+menuitem.connect = Failas
 menuitem.contacts = Adresatai
 menuitem.copy.to = Kopijuoti \u012f grup\u0119
 menuitem.delete = Pa\u0161alinti
