SPARK-1720 Add option to disable Incoming Call notification popup when using asterisk-im plugin

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -360,6 +360,7 @@ checkbox.show.avatars.in.contactlist = Show &avatars in contact list
 checkbox.show.notifications.in.conference = Show &notifications in conference rooms
 checkbox.show.time.in.chat.window = Show &time in chat window
 checkbox.show.toaster = Show a &toast popup
+checkbox.disable.asterisk.toaster = Disable phone toast popup
 checkbox.split.chat.window = Dock windows (requires restart)
 checkbox.start.in.tray = &Start in system tray
 checkbox.click.single.tray = &Use single click in system tray to bring spark to front
